--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,26 @@
-name: Hello GitHub Actions
+name: Java CI with Gradle
 
-on: [push]
-
+on:
+  push:
+    branches: [ master ]
+  pull_requests:
+    branches: [ master ]
+    
 jobs:
-  hello:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - run: echo "👋 Hello, GitHub Actions!"
-      - run: echo "push 하면 자동으로 실행됨"
+    - uses: actions/checkout@v2
+
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
+    - name: Build with Gradle
+      run: ./gradlew build
+
